# Lego_Assembly

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .railwayignore  .secrets.baseline  ARCHITECTURE_PROPOSAL.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  QUICK_START.md  README.md  VIDEO_ANALYSIS.md  cache_manager.py  clean_all.sh  debug_bbox_coordinates.py  debug_gemini_response.py  diagnose_image_resize.py  fix_graph_images.py  generate_admin_token.py  huggingface_login.py  ingest_manual.sh  main.py  nixpacks.toml  pyproject.toml  pytest.ini  railway.json  requirements-local.txt  requirements.txt  start_backend.sh  start_frontend.sh  test_bbox_extraction.py  test_caching.py  test_cv_detection.py  test_gemini_detailed.py  test_graph_regeneration.py  test_installation.py
backend/: requirements-backend.txt  reset_chroma.py
backend/app/: __init__.py  auth.py  config.py  main.py  security.py
backend/app/graph/: __init__.py  graph_manager.py  state_matcher.py
backend/app/ingestion/: __init__.py  data_processor.py  ingest_service.py  multimodal_processor.py
backend/app/llm/: __init__.py  deepseek_client.py  gemini_client.py  litellm_client.py  moonshot_client.py  qwen_client.py
backend/app/models/: __init__.py  schemas.py  video_models.py
backend/app/query/: __init__.py  query_router.py  query_types.py
backend/app/query/handlers/: __init__.py  base_handler.py  current_step_handler.py  help_handler.py  next_step_handler.py  parts_handler.py
backend/app/rag/: __init__.py  generator.py  pipeline.py  query_augmenter.py  retrieval.py
backend/app/scripts/: __init__.py  ingest_all.py  ingest_manual.py  inspect_db_simple.py  inspect_vector_store.py  test_graph_regeneration.py  view_steps.py  visualize_graph.py
backend/app/utils/: background_tasks.py
backend/app/vector_store/: __init__.py  chroma_manager.py
backend/app/video/: __init__.py  coordinate_utils.py  metadata_extractor.py  overlay_renderer.py  storage_manager.py  video_analyzer.py  video_prompts.py
backend/app/vision/: __init__.py  direct_step_analyzer.py  guidance_generator.py  prompt_manager.py  state_analyzer.py  state_comparator.py  state_comparator.py.bak  test_visual_matching.py  visual_matcher.py  visual_state_extractor.py
backend/app/vision/prompts/: direct_step_detection_prompt.txt  error_detection_prompt.txt  part_association_prompt.txt  state_analysis_prompt.txt  step_extraction_prompt.txt  subassembly_identification_prompt.txt
backend/backend/chroma_db/: chroma.sqlite3
backend/chroma_db/: chroma.sqlite3
chroma_db/: chroma.sqlite3
data/: README.md
docs/: QUICK_START.md  README.md  VLM_ONLY_REFACTORING.md
examples/: README.md
frontend/: .gitignore  next.config.js  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/graph/: page.tsx
frontend/components/: ApiDebug.tsx  ChatInterface.tsx  GraphVisualization.tsx  ImageUpload.tsx  ManualSelector.tsx  StepNavigator.tsx  VideoStepPlayer.tsx  VideoUpload.tsx  VisualGuidance.tsx
frontend/lib/api/: client.ts
frontend/lib/providers/: QueryProvider.tsx
frontend/lib/store/: manualStore.ts
scripts/: run_tests.sh  upload_manual_to_railway.py
scripts/dev/: check_coverage.sh  clean_all.sh  install_hooks.sh  start_backend.sh  start_frontend.sh
scripts/hooks/: .pre-commit-secrets.sh
scripts/utils/: cache_manager.py  generate_admin_token.py  ingest_manual.sh  visualize_graph.py
src/: __init__.py
src/api/: __init__.py  anthropic_api.py  deepseek_api.py  gemini_api.py  kimi_api.py  litellm_vlm.py  openai_api.py  qwen_vlm.py
src/plan_generation/: __init__.py  component_extractor.py  graph_builder.py  part_association.py  part_database.py  plan_structure.py  spatial_reasoning.py
src/plan_generation/post_processing/: __init__.py  analyzer.py
src/plan_generation/post_processing/strategies/: __init__.py  dependency_analysis.py  part_similarity.py  spatial_temporal.py
src/utils/: __init__.py  bbox_visualizer.py  cache.py  config.py  url_handler.py  visualization.py
src/vision_processing/: __init__.py  build_memory.py  cv_part_detector.py  dependency_graph.py  document_analyzer.py  manual_input_handler.py  metadata_models.py  roboflow_sam3_segmenter.py  sam3_segmenter.py  sam_segmenter.py  step_recovery.py  token_budget.py  user_metadata_collector.py  vlm_step_extractor.py
tests/: TESTING.md  __init__.py  conftest.py  test_build_memory.py  test_caching.py  test_graph_regeneration.py  test_security.py  test_user_metadata.py
tests/integration/: __init__.py  test_visual_matching.py  test_vlm_only_workflow.py
tests/unit/: __init__.py  test_direct_step_analyzer.py  test_graph_manager.py
tests/unit/post_processing/: __init__.py  test_analyzer_integration.py  test_dependency_analysis.py  test_part_similarity.py  test_spatial_temporal.py
