[project]
name = "lego-assembly"
version = "1.0.0"
description = "LEGO Assembly System - Phase 1: Instruction Manual Processing & 3D Plan Generation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "LEGO Assembly Team"}
]

dependencies = [
    # Phase 1: Manual Processing
    "pdf2image>=1.16.0",
    "PyMuPDF>=1.23.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "jsonschema>=4.20.0",
    "diskcache>=5.6.0",
    "loguru>=0.7.0",
    "dashscope>=1.14.0",
    # RAG Backend
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "chromadb>=0.4.22",
    "pydantic-settings>=2.1.0",
    "aiofiles>=23.2.1",
    "openai>=1.6.0",
]

[project.optional-dependencies]
full = [
    "scipy>=1.11.0",
    "opencv-python>=4.8.0",
    "trimesh>=4.0.0",
    "openai>=1.6.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
lego-assembly = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

