[project]
name = "lego-assembly"
version = "1.0.0"
description = "LEGO Assembly System - Phase 1: Instruction Manual Processing & 3D Plan Generation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "LEGO Assembly Team"}
]

dependencies = [
    # Phase 1: Manual Processing
    "pdf2image>=1.16.0",
    "PyMuPDF>=1.23.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "jsonschema>=4.20.0",
    "diskcache>=5.6.0",
    "loguru>=0.7.0",
    "dashscope>=1.14.0",
    # RAG Backend
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "chromadb>=0.4.22",
    "pydantic-settings>=2.1.0",
    "aiofiles>=23.2.1",
    # LLM Unified Interface
    "litellm>=1.30.0",
    "openai>=1.6.0", # Required by LiteLLM for OpenAI models
    "google-generativeai>=0.3.0", # For video analysis with Gemini Robotics ER
    # Security
    "python-jose[cryptography]>=3.3.0",  # JWT token handling
    "passlib[bcrypt]>=1.7.4",  # Password hashing
    "slowapi>=0.1.9",  # Rate limiting
    # Note: torch, torchvision, ultralytics, matplotlib removed for backend deployment
    # These are only needed for local Phase 1 processing, not for Railway backend API
]

[project.optional-dependencies]
ml = [
    # Large ML dependencies - only needed for local Phase 1 processing
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics>=8.0.0",
    "matplotlib>=3.9.4",
    "scipy>=1.11.0",
    "scikit-learn",
    "scikit-image",
    "trimesh>=4.0.0",
]
full = [
    "scipy>=1.11.0",
    "opencv-python>=4.8.0",
    "trimesh>=4.0.0",
    "openai>=1.6.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.5.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
lego-assembly = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py are OK

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["backend/app", "src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/conftest.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if 0:",
    "if False:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

